--- a/ZipCode.html
+++ b/ZipCode.html
@@ -13,9 +13,7 @@
         }
         return false;
     }
-    let zipcode = "03201 - 2150" ;
-    console.log(is_usZipCode(zipcode));
-    zipcode = "7892";
+    let zipcode = "03201-2150" ;
     console.log(is_usZipCode(zipcode));
 </script>
 </body>
